# AI_Image_Generator

./: .gitignore  License  README.md  implementation_plan.md  video_1_metadata.md  video_1_script.md  walkthrough.md
apps/: README.md  pyproject.toml  requirements.txt
apps/src/: main.py
apps/src/comfy_generator/: client.py  exceptions.py  file_system.py  payload_mgr.py  workflow_mgr.py
apps/src/tests/: test_file_system_errors.py
apps/workflows/: comfyui_api.json
documents/: channel_strategy.md  task.md
prompts/: Image_Download_Instructions_Prompt_HiggsfieldAI.txt  Image_Generation_Prompt_HiggsfieldAI.txt  my_video_script.txt
scripts/: main.py  my_script.txt
scripts/image_generator/: README.md  generate_images.py  pyproject.toml  requirements.txt
scripts/image_generator/workflows/: gsl_starter_1_1.json
src/: image_generator.py  main.py
